added more file configuration

--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
     <h2>I'am  a DataScientist And Web Developer</h2>
     <hr/>
     
-    <a href="../portfolio/public/links/birthday_project.html"><h2>Birth Day Page</h2></a>
+    <a href="./public/links/birthday_project.html"><h2>Birth Day Page</h2></a>
     <img src="public/images/birthday.png">    
     <hr/>
 
     <a href="./public/links/move_ranking.html"><h2>Movie Ranking</h2></a>
     <img src="./public/images/movie_ranking.png"/>
 
-    <a href="../4.1webpages/public/about.html">About Me</a>
-    <a href="../4.1webpages/public/contact.html">Contact Me</a>
+    <a href="./public/links/about.html">About Me</a>
+    <a href="./public/links/contact.html">Contact Me</a>
 
 </body>
 </html>
